Showing important tasks on the dashboard.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
 <h2>Dashboard</h2>
+
+<table class="table">
+  <thead>
+    <th>Task</th>
+  </thead>
+  <tbody>
+    <tr *ngFor="let task of tasks">
+      <td>{{ task.title }}</td>
+    </tr>
+  </tbody>
+</table>
