--- a/src/app/tasks/task-detail/task-detail.component.html
+++ b/src/app/tasks/task-detail/task-detail.component.html
@@ -8,6 +8,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-8">
+      <button class="btn btn-default" (click)="goBack()">Come back</button>
       <button type="submit" class="btn btn-success">Save</button>
     </div>
   </div>
