--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
-<h2>Dashboard</h2>
+<h2 class="page-header">Dashboard</h2>
 
 <table class="table">
   <thead>
-    <th>Task</th>
-    <th>Actions</th>
+    <tr>
+      <th>Task</th>
+      <th>Actions</th>
+    </tr>
   </thead>
   <tbody>
     <tr *ngFor="let task of tasks">
