--- a/src/app/tasks/task-detail/task-detail.component.html
+++ b/src/app/tasks/task-detail/task-detail.component.html
@@ -1,4 +1,4 @@
-<h2>Task Details: {{ task?.title }}</h2>
+<h2 class="page-header">Task Details: {{ task?.title }}</h2>
 <div class="form-horizontal" *ngIf="task">
   <div class="form-group">
     <label for="title" class="col-sm-2 control-label">Title</label>
