--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,8 +1,12 @@
+<h2 class="page-header">Tasks List</h2>
+
 <table class="table">
   <thead>
-    <th>ID</th>
-    <th>Title</th>
-    <th>Actions</th>
+    <tr>
+      <th>ID</th>
+      <th>Title</th>
+      <th>Actions</th>
+    </tr>
   </thead>
   <tbody>
     <tr *ngFor="let task of tasks">
